<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_mux_interfaces</name>
  <version>0.0.0</version>
   <description> Define action client to send goals and have publishers to publish messages of different frequency  . Goal preemption when a high priority(frequency) goal is arrived</description>
  <maintainer email="poolatejaswi2021@gmail.com">Poola Tejaswi</maintainer>
  <license>Apache-2.0</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
<depend>rosidl_default_generators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
