<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_mux_server</name>
  <version>0.0.0</version>
   <description> Define action Server inorder to pre empt or cancel the previous goal when a new goal arribes and a generic subscriber to subscribe to a topic . Goal preemption when a high priority(frequency) goal is arrived</description>
  <maintainer email="poolatejaswi2021@gmail.com">Poola Tejaswi</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>action_mux_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
